# living_cubes

./: Cargo.toml  README.md  living_cube.excalidraw
src/: main.rs  main.rs.old
src/cube/: mod.rs
src/cube_logic/: grid.rs  mod.rs
src/grid_plugin/: coordinate.rs  grid.rs  mod.rs  temperature.rs  todo.md
src/terrain/: mod.rs  plugin.rs
