[package]
name = "living_cubes"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = true, features = [
"bevy_render",
"bevy_asset",
"multi_threaded",
"dynamic_linking",
"wayland",
"bevy_winit",
"bevy_pbr",
"bevy_sprite",
"tonemapping_luts"
] }
log = { version = "*", features = [
"max_level_debug",
"release_max_level_warn",
] }
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17.0", features = ["openblas-system"] }
rand = "0.9.2"
rand_distr = "0.5.1"
#bevy_egui = "0.36.0"
#avian3d ={ version = "*", features = ["simd", "bevy_picking"]}
#bevy_picking = "0.16.1"
#bevy_fly_camera = "0.16.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
